# ssss

./: DESCRIPTION  Makefile.am  README  RELEASE-NOTES  bootstrap  build.xml  configure.ac  index.html  params.json
doc/: Makefile.am
doc/apidoc/: Doxyfile.template  Makefile.am  doxygen.css  doxygen.init  doxygen.sty  footer.html  header.html
doc/man/: Makefile.am  common-ssss-arg-desc.xml  common-ssss-args.xml  common-ssss-env.xml  glite-ssss-join-key.1.xml  glite-ssss-join-passwd.1.xml  glite-ssss-split-key.1.xml  glite-ssss-split-passwd.1.xml  html-output.xsl  latex-output.xsl  ssss-join-key.1.xml  ssss-join-passwd.1.xml  ssss-split-key.1.xml  ssss-split-passwd.1.xml
interface/: Makefile.am  ssss.h
project/: build.properties  configure.properties.xml  e-c_org.glite.security.ssss.ini  properties.xml  version.properties
src/: Makefile.am  genKey.c  joinKey.c  joinPasswd.c  log4c.c  shamir-funcs.c  shamir.c  splitKey.c  splitPasswd.c  ssssI.h  test-shamir-ascii.c  test-shamir-ascii.sh  test-shamir.c  test-shamir.sh
