#
#  Copyright (c) Members of the EGEE Collaboration. 2005.
#  See http://eu-egee.org/partners/ for details on the copyright holders.
#  For license conditions see the license file or http://eu-egee.org/license.html
#
#  doc/Makefile.am file for the gLite Transfer URL Copy module
#
#  Authors: Akos Frohner <Akos.Frohner@cern.ch>
#  Version info: $Id: Makefile.am,v 1.3 2006/08/15 16:14:13 szamsu Exp $
#  Release: $Name:  $

SUBDIRS	= apidoc man

docdir = $(datadir)/doc/$(PACKAGE)
#dist_doc_DATA = README

MAINTAINERCLEANFILES = Makefile.in
