#
#  Copyright (c) Members of the EGEE Collaboration. 2005.
#  See http://eu-egee.org/partners/ for details on the copyright holders.
#  For license conditions see the license file or http://eu-egee.org/license.html
#
#  interface/Makefile.am file for the gLite security ssss component
#
#  Authors: Akos Frohner <Akos.Frohner@cern.ch>
#  Version info: $Id: Makefile.am,v 1.1.1.1 2006/08/04 14:56:01 szamsu Exp $
#  Release: $Name:  $


nobase_include_HEADERS =  \
	ssss.h

MAINTAINERCLEANFILES = Makefile.in
